looking good at all sizes

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ html {
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100vh;
-	font-family: 'Roboto', sans-serif;		
+	font-family: 'Roboto', sans-serif;	
+	background-position: center;	
 }
 
 
@@ -51,7 +52,7 @@ span {
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
 
 	.keys {
 		display: flex;
@@ -93,14 +94,10 @@ span {
 
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
 
-	html {
-		background-image: url('beatpad.jpg');
-		background-size: cover;
-		background-repeat: no-repeat;
-		height: 100vh;
-		background-position: bottom right;		
+	html {	
+		background-position: center;		
 	}	
 
 	.keys {
@@ -108,29 +105,33 @@ span {
 		flex-wrap: wrap;
 		min-height: 0;
 		justify-content: center;
-		margin-top: 20%;
+		margin-top: 5%;
 	}
 
 	.key {
-		width: 200px;
-		height: 150px;
+		width: 130px;
+		height: 60px;
 		display: flex;
 		flex-direction: column;
 		background-color: #ca4538;
-		margin: 2rem;
+		margin: 1.5rem;
 		padding: .3rem 0;
 		transition: .09s;
 
 	}
 
 	kbd {
+		margin-top: .3rem;
 		text-align: center;
 		margin-bottom: .3rem;
+		font-size: 1.2rem;
 	}
 
 	span {
 		text-align: center;
 		text-transform: uppercase;
+		font-size: 1rem;
+		margin-top: .3rem;
 	}
 
 	.playing {
@@ -138,3 +139,53 @@ span {
 	}	
 
 }
+
+@media screen and (max-width: 320px) {
+
+	.keys {
+		margin-top: 2%;
+	}
+	
+	.key {
+		width: 100px;
+		height: 55px;
+		display: flex;
+		flex-direction: column;
+		background-color: #ca4538;
+		margin: 1.5rem;
+		padding: .3rem 0;
+		transition: .09s;
+
+	}
+
+	kbd {
+		margin-top: .3rem;
+		text-align: center;
+		margin-bottom: .3rem;
+		font-size: 1.2rem;
+	}
+
+	span {
+		text-align: center;
+		text-transform: uppercase;
+		font-size: 1rem;
+		margin-top: .3rem;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
